@@ -1,3 +1,7 @@
+2011-08-20  Valek Filippov
+
+		* Add 'reload' to re-read same file.
+
 2011-08-18  Valek Filippov
 
 		* DOC: saving with screwing VBA modules
